--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.13.4
   internet_connection_checker: ^1.0.0+1
   json_annotation: ^4.4.0
+  mockito: ^5.4.0
   provider: ^6.0.5
   splashscreen: ^1.3.5
   timeago: ^3.4.0
